WebCore:

2008-09-24  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Dan Bernstein.

        Test: editing/spelling/inline_spelling_markers.html

        - https://bugs.webkit.org/show_bug.cgi?id=20092
        Spelling markers positioned incorrectly in RTL text

        Measure spelling markers with selectionRectForText() to fix RTL.

        This patch also fixes hit-testing for spelling marker tool tips,
        which used to work only on the first line.

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::paintSpellingOrGrammarMarker):

LayoutTests:

2008-09-24  Jeremy Moskovich  <jeremy@chromium.org>

        Reviewed by Dan Bernstein.

        - https://bugs.webkit.org/show_bug.cgi?id=20092
        Spelling markers positioned incorrectly in RTL text

        * editing/spelling/inline_spelling_markers.html: Added.
        * platform/mac/editing/spelling/inline_spelling_markers-expected.checksum: Added.
        * platform/mac/editing/spelling/inline_spelling_markers-expected.png: Added.
        * platform/mac/editing/spelling/inline_spelling_markers-expected.txt: Added.



Canonical link: https://commits.webkit.org/29148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36874 268f45cc-cd09-0410-ab3c-d52691b4dbfc